--- a/web/src/main/webapp/WEB-INF/templates/home.html
+++ b/web/src/main/webapp/WEB-INF/templates/home.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <title>The generated source code Web Application for Sakai</title>
     
-    <!-- 'head' fragment now includes Bootstrap Datepicker libraries -->
+  
     <th:block th:include="fragments/head"></th:block>
 </head>
 <body>
-
-    <!-- Include the navigation fragment -->
     <th:block th:include="fragments/hnav"></th:block>
-    
     <div class="container">
         <div class="text-center">
-            <!-- ... (Your original H1, lead, and p tags) ... -->
+
 			<p>Login userId: <span th:text="${session.userDisplayName}"></span></p>
 			<p>Login Display Username: <span th:text="${session.userEid}"></span></p>
             <p>
@@ -22,7 +19,7 @@
             </p>
         </div>
 
-        <!-- ========== ADD: Datepicker Test Section ========== -->
+
         <div class="container">
 		    <div class="text-center mt-4 p-4 border rounded" style="max-width: 400px; margin: auto;">
 		        <h4>Bootstrap Datepicker Test</h4>
@@ -42,16 +39,10 @@
 		        </form>
 		    </div>
 		   </div>
-        <!-- ========== END: Datepicker Test Section ========== -->
-
-        <!-- Add margin-top to the footer -->
         <div th:insert="~{fragments/footer :: footer}" class="mt-4"></div>
     </div>
     
-	<!-- Common 
-    <th:block th:include="fragments/frg_about_dialog"></th:block>-->
 
-    <!-- ========== ADD: Datepicker Activation Script ========== -->
     <script th:inline="javascript" type="text/javascript">
         // Lấy các giá trị động từ Controller (Thymeleaf)
         var jsFormat = /*[[${currentFormat}]]*/ 'dd/MM/yyyy';
@@ -63,14 +54,13 @@
 
         $(document).ready(function() {
             $('#datepicker-demo').datepicker({
-                format: datepickerFormat, // Dùng format động
-                language: jsLocale,       // Dùng ngôn ngữ động
+                format: datepickerFormat, 
+                language: jsLocale,       
                 autoclose: true,
                 todayHighlight: true
             });
         });
     </script>
-    <!-- ========== END: Activation Script ========== -->
 
 </body>
 </html>
